[project]
name = "hw-backend-1"
version = "0.1.0"
description = "NUR"
authors = [
    {name = "Bigeldiyev"}
]
license = {text = "001"}
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
